# slack-bot-rs

./: Cargo.toml  Makefile  README.md  slack-bot.service
.github/workflows/: main.yml
src/: helper.rs  main.rs
