[package]
name = "slack-bot-rs"
version = "0.1.0"
authors = ["keitaro.kodama <keitaro.kdm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = "0.25.0"
structopt = "0.3"
regex = "1"
reqwest = "0.9.*"
serde = "*"
