[package]
name = "slack-bot"
version = "0.2.0"
authors = ["keitaro.kodama <keitaro.kdm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = "0.25.0"
structopt = "0.3"
regex = "1"
reqwest = "0.9.*"
serde = "*"
log = "0.4.0"
env_logger = "0.8.2"
